# ActIA

./: .gitattributes  .gitignore  README.md  docker-compose.yml  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  rate_limit.py  schemas.py
backend/app/api/routes/: transcriptions.py
backend/app/application/: generate_meeting_minutes.py
backend/app/domain/: models.py  ports.py
backend/app/domain/services/: speaker_attribution.py
backend/app/infrastructure/analysis/: assemblyai_analyzer.py  local_audio_analyzer.py  speechmatics_analyzer.py
backend/app/infrastructure/diarization/: demo_diarizer.py  pyannote_diarizer.py
backend/app/infrastructure/jobs/: in_memory_job_store.py
backend/app/infrastructure/nlp/: demo_minutes_generator.py  gemini_minutes_generator.py  ollama_minutes_generator.py  prompt.py
backend/app/infrastructure/transcription/: demo_transcriber.py  (+1 more)
backend/app/workers/: job_worker.py
backend/tests/api/: test_transcriptions_api.py
backend/tests/application/: test_generate_meeting_minutes.py
backend/tests/domain/: test_speaker_attribution.py
backend/tests/fakes/: adapters.py
backend/tests/infrastructure/: test_assemblyai_analyzer.py  test_demo_adapters.py  test_gemini_prompt.py  test_gemini_retry.py  test_in_memory_job_store.py  test_local_audio_analyzer.py  test_pyannote_mapping.py  test_real_adapter_validation.py  test_speechmatics_analyzer.py  test_whisper_mapping.py
backend/tests/integration/: test_demo_pipeline.py
(+41 files in other folders)
